crates/monochange_integration_tests/tests/snapshots/sync_versions__bare_versions_command_reports_changes_without_writing_files.snap
---
source: crates/monochange_integration_tests/tests/sync_versions.rs
expression: output
---
• Would update 2 dependency constraints · in 2 files · strategy default · no files were modified

[workspace]/packages/version_mismatch/pubspec.yaml
  core  ^1.1.0 → ^1.2.3

[workspace]/packages/workspace_path_fail/pubspec.yaml
  core  path: ../core → ^1.2.3

Run `monochange versions sync` to write these changes.

Strategy order: package config → ecosystem config → ecosystem default; `--strategy` overrides.
