crates/monochange_integration_tests/tests/snapshots/sync_versions__versions_cli_json_output_matches_snapshot.snap
---
source: crates/monochange_integration_tests/tests/sync_versions.rs
expression: output
---
{
  "applied": false,
  "strategy": "Default",
  "changes": [
    {
      "path": "[workspace]/packages/version_mismatch/pubspec.yaml",
      "ecosystem": "dart",
      "changes": [
        {
          "dependency_name": "core",
          "section": "dependencies",
          "old_value": "^1.1.0",
          "new_value": "^1.2.3"
        }
      ]
    },
    {
      "path": "[workspace]/packages/workspace_path_fail/pubspec.yaml",
      "ecosystem": "dart",
      "changes": [
        {
          "dependency_name": "core",
          "section": "dependencies",
          "old_value": "path: ../core",
          "new_value": "^1.2.3"
        }
      ]
    }
  ],
  "skipped": []
}
