crates/monochange_integration_tests/tests/snapshots/sync_versions__versions_cli_list_json_uses_exact_package_and_group_ids.snap
---
source: crates/monochange_integration_tests/tests/sync_versions.rs
assertion_line: 300
expression: value
---
{
  "app": "1.0.0",
  "core": "1.0.0",
  "sdk": "1.0.0"
}
