crates/monochange_integration_tests/tests/snapshots/sync_versions__versions_cli_list_text_output_matches_snapshot.snap
---
source: crates/monochange_integration_tests/tests/sync_versions.rs
expression: output
---
app: 1.0.0
core: 1.0.0
sdk: 1.0.0
