crates/monochange_integration_tests/tests/snapshots/sync_versions__versions_cli_reports_unsupported_ecosystems_in_snapshot.snap
---
source: crates/monochange_integration_tests/tests/sync_versions.rs
expression: output
---
Skipped unsupported ecosystems:
- [workspace]/cargo/sdk-core/Cargo.toml (Cargo): ecosystem sync is not implemented yet
- [workspace]/deno/tool/deno.json (Deno): ecosystem sync is not implemented yet

Strategy: default (package config → ecosystem config → ecosystem default; --strategy overrides)

(dry run — no files were modified)
