crates/monochange_integration_tests/tests/snapshots/sync_versions__versions_cli_sync_subcommand_matches_legacy_output.snap
---
source: crates/monochange_integration_tests/tests/sync_versions.rs
expression: sync_output
---
• Would update 2 dependency constraints · in 2 files · strategy default · dry-run, no files were modified

packages/version_mismatch/pubspec.yaml
  core  ^1.1.0 → ^1.2.3

packages/workspace_path_fail/pubspec.yaml
  core  path: ../core → ^1.2.3

Strategy order: package config → ecosystem config → ecosystem default; `--strategy` overrides.
